--- a/site.conf
+++ b/site.conf
@@ -6,8 +6,12 @@
 
   -- Shorthand of the community.
   site_code = 'ffkbucgn',
-  opkg_repo = 'http://openwrt.draic.info/barrier_breaker/14.07/%S/packages',
-
+   opkg = {
+   openwrt = 'http://openwrt.draic.info/%n/%v/%S/packages',
+   extra = {
+	modules = '',
+	},
+    },
   -- Prefixes used within the mesh. Both are required.
   prefix4 = '10.158.0.0/18',
   prefix6 = 'fdd3:5d16:b5dd:01fc::/64',
@@ -25,47 +29,33 @@
   regdom = 'DE',
 
   -- Wireless configuration for 2.4 GHz interfaces.
-  wifi24 = {
-    -- Wireless channel.
-    channel = 1,
-
-    -- ESSID used for client network.
-    ssid = 'kbu.freifunk.net',
-
-    -- Specifies the channel width in 802.11n and 802.11ac mode.
-    -- Possible values are:
-    -- HT20 (single 20MHz channel),
-    -- HT40- (2x 20MHz channels, secondary below)
-    -- HT40+ (2x 20MHz channels, secondary above)
-    htmode = 'HT20',
-
-    -- Adjust these values!
-    mesh_ssid = '02:d2:22:01:fc:22',  -- ESSID used for mesh
-    mesh_bssid = '02:d2:22:01:fc:22', -- BSSID used for mesh
-
-    -- Bitrate used for multicast/broadcast packets.
-    mesh_mcast_rate = 12000,
-
-    -- (optional) mesh VLAN on 802.11 ad-hoc interface (1-4095)
-    -- mesh_vlan = 14,
-    -- client_disabled = true,
-    -- mesh_disabled = false,
-  },
+   wifi24 = {
+        channel = 1,
+	ap = {
+	    	ssid = 'kbu.freifunk.net',
+             },
+ 	ibss = {
+	        ssid = '02:d2:22:01:fc:22',  -- ESSID used for mesh
+    		bssid = '02:d2:22:01:fc:22', -- BSSID used for mesh
+   		mcast_rate = 12000,
+               },
+	    },
 
   -- Wireless configuration for 5 GHz interfaces.
   -- This should be equal to the 2.4 GHz variant, except
   -- for channel and htmode.
   wifi5 = {
-    ssid = 'kbu.freifunk.net',
     channel = 44,
-    htmode = 'HT20',
-    mesh_ssid = '02:d2:22:01:fc:23',  -- ESSID used for mesh
-    mesh_bssid = '02:d2:22:01:fc:23', -- BSSID used for mesh
-    mesh_mcast_rate = 12000,
-    -- mesh_vlan = 14,
-    -- client_disabled = true,
-    -- mesh_disabled = false,
+	ap = {
+		    ssid = 'kbu.freifunk.net',
+    	     },
+      ibss = {
+		    ssid = '02:d2:22:01:fc:23',
+		    bssid = '02:d2:22:01:fc:23',
+		    mcast_rate = 12000,
+	  },
   },
+
 
   -- The next node feature allows clients to always reach the node it is
   -- connected to using a known IP address.
@@ -84,6 +74,11 @@
     methods = {'salsa2012+umac'},
     enabled = true,
     configurable = true,
+    bandwidth_limit = {
+   			 enabled = false,
+ 			   ingress = 3000,
+ 			   egress = 384,
+    		    },
     mtu = 1312,
     groups = {
       backbone = {
@@ -173,14 +168,7 @@
   -- },
 
   -- Bandwidth limiting
-  simple_tc = {
-    mesh_vpn = {
-      ifname = 'mesh-vpn',
-      enabled = false,
-      limit_egress = 400,
-      limit_ingress = 3000,
-    },
-  },
+ 
   setup_mode = {
   skip = true,
   },
