Shortened prefix, corrected site code

--- a/site.conf
+++ b/site.conf
@@ -1,11 +1,11 @@
 
 {
-  hostname_prefix = 'freifunk-',
+  hostname_prefix = 'ffkbuk-',
 
-  site_name = 'Freifunk KBU Hood CGN',
+  site_name = 'Freifunk KBU Hood Koeln',
 
   -- Shorthand of the community.
-  site_code = 'ffkbucgn',
+  site_code = 'ffkbuk',
    opkg = {
    openwrt = 'http://openwrt.draic.info/%n/%v/%S/packages',
    extra = {
